# optses

./: .gitignore  README.md  dev-env.yml  pyproject.toml  setup.py
optses/: coupling.py  data.py  model.py  storage_system.py  timeseries.py
optses/application/: abstract_application.py  arbitrage.py  multiuse.py  peak_shaving.py  self_consumption.py
optses/converter/: converter.py
optses/storage/: abstract_storage.py  converter.py  crm.py  ecm.py  erm.py  spm.py  system.py
test/: demo.ipynb  test.py
test/data/: power_profile.csv
